feat: transform site into professional knowledge hub
- Update branding from 'Dog Blog' to 'Pawina's Knowledge Hub'
- Redesign homepage with clean white/gray minimal design
- Add professional documentation structure with organized sidebars
- Create comprehensive React best practices documentation
- Add JavaScript ES6+ learning notes
- Create web development projects showcase
- Add professional blog post about React architecture
- Update CSS with modern design system and accessibility
- Configure professional navigation and search
- Add proper blog tags and author configuration

This transforms the basic Docusaurus template into a professional
personal documentation platform suitable for showcasing technical
expertise and sharing knowledge.

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,3 +1,13 @@
+pawina:
+  name: Pawina Chanthachon
+  title: Software Developer & Technical Writer
+  url: https://github.com/Pawina85
+  image_url: https://github.com/Pawina85.png
+  page: true
+  socials:
+    github: Pawina85
+    linkedin: pawina-chanthachon
+
 yangshun:
   name: Yangshun Tay
   title: Ex-Meta Staff Engineer, Co-founder GreatFrontEnd
